hard-gists/2942374/run.log
=== Docker Run Log for 2942374 ===
Started at: Mi 29. Okt 13:21:40 CET 2025

[2025-10-29 13:21:41] START: Running container for 2942374
[2025-10-29 13:21:41] SUCCESS: Container 77df34b4a965e742909fd2aca5597acdbff581f40a7180fd12e63872dc7da2d5 started for 2942374
=== Container logs for 2942374 ===
  File "/snippet.py", line 49
    except (AttributeError, KeyError), e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2942374 ===
[2025-10-29 13:21:43] INFO: Container 77df34b4a965e742909fd2aca5597acdbff581f40a7180fd12e63872dc7da2d5 has stopped
